--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </div>
 
     <!-- WhatsApp Button -->
-    <a href="https://wa.me/917265064277?text=Hi%20Jay%InfoTech%20Solutions%2C%20I%20visited%20your%20website%20and%20would%20like%20to%20know%20more" class="whatsapp-btn" target="_blank" rel="noopener noreferrer" title="Message us on WhatsApp">
+    <a href="https://wa.me/917265064277?text=Hi%20Jay%20InfoTech%20Solutions%2C%20I%20came%20through%20your%20website%20jaycreates.in%20and%20want%20to%20discuss%20a%20project." class="whatsapp-btn" target="_blank" rel="noopener noreferrer" title="Message us on WhatsApp">
         <i class="fab fa-whatsapp"></i>
         <span class="sr-only">WhatsApp</span>
     </a>
