--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </div>
 
     <!-- WhatsApp Button -->
-    <a href="https://wa.me/917265064277?text=Hi,Jay%20InfoTech%20Solutions.%2C%20I%20came%20through%20your%20website%20jaycreates.in%20and%20want%20to%20discuss%20a%20project." class="whatsapp-btn" target="_blank" rel="noopener noreferrer" title="Message us on WhatsApp">
+    <a href="https://wa.me/917265064277?text=Hello%20%2C%20I%20am%20interested%20in%20the%20Basic%20web%20development%20package%20from%20Jay%20InfoTech%20Solutions.%20Please%20provide%20more%20details." class="whatsapp-btn" target="_blank" rel="noopener noreferrer" title="Message us on WhatsApp">
         <i class="fab fa-whatsapp"></i>
         <span class="sr-only">WhatsApp</span>
     </a>
